fixed horizontal scrollbar

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -66,7 +66,7 @@
 @mixin burger {
  .hamburger-menu {
   height: 7vh;
-  width: 100vw;
+  width: 100%;
   background-color: v.$colorPrimaryTint;
   display: flex;
   justify-content: flex-end;
