--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,8 +1,11 @@
 @use "variables" as v;
 @use "mixins" as m;
+body {
+  width: 100vw;
+}
 .hero {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   background-image: v.$url_bg;
   background-size: cover;
   background-position: center;
@@ -30,7 +33,7 @@
 .container {
   position: relative;
   @include m.flexColCC;
-  width: 100vw;
+  width: 100%;
   .about {
     @include m.flexColCC;
     text-align: center;
@@ -53,7 +56,7 @@
       } 
      }
     &__person {
-      width: 80vw;
+      width: 80%;
       @include m.desktop {
         width: 35%;
       }
@@ -101,17 +104,30 @@
   .contact { // FOOTER
     color: v.$colorPrimary;
     background: v.$colorSecondary;
-    width: 100vw;
-    height: 70vh;
-    padding: 60px;
+    width: 100%;
     font-size: 1.6em;
-    @include m.flexColJusSB;
+    display: flex;
+    justify-content: center;
     @include m.desktop {
       flex-direction: row;
       justify-content: space-around;
       align-items: center;
       gap: 50px;
       height: 250px;
+    }
+    &__wrapper {
+      height: 70vh;
+      width:max-content;
+      padding: 60px 0;
+      @include m.flexColJusSB;
+      @include m.desktop {
+        width: 100%;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: baseline;
+        gap: 50px;
+        height: 250px;
+      }
     }
     &__street, &__digits, &__social-media { 
       @include m.flexCol;
